--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="Download and Watch movies, also getting more details about any movie. It budget, revenue trailers, rating and cast" />
@@ -26,8 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.0/css/font-awesome.min.css">
-  <title>Teymee|Cinema</title>
-  <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
+  <title>Teymee | Cinema</title>
 </head>
 
 <body>
