--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
   <meta name="description"
     content="Download and Watch movies, also getting more details about any movie. It budget, revenue trailers, rating and cast" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
  
   <!--
       manifest.json provides metadata used when your web app is installed on a
